<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dip" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/username"
		android:text="@string/default_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/usernm"
        android:inputType="textFilter" />

    <TextView
        android:layout_width="286dp"
        android:layout_height="90dp"
        android:layout_weight="0.31"
        android:text="@string/identify"
        android:textSize="20dip" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnTrainRec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/start_trainrec" />
    </LinearLayout>

    <Button
        android:id="@+id/btnIdentify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_identify" />

</LinearLayout>
