<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dip" >


    <TextView
		android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="0.34"
        android:textSize="20sp" />
  
    <TextView
		android:id="@+id/tv_info"
        android:layout_width="281dp"
        android:layout_height="0dip"
        android:layout_weight="0.34"
        android:textSize="20sp" />
<!--         android:text="@string/app_info" -->
    
    <ImageView
        android:contentDescription="@string/train_app"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@drawable/icon" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/start_recording" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/stop_recording" />
    </LinearLayout>

<!--     <Button
        android:id="@+id/btnSkip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/skiprec" />
 -->
</LinearLayout>